--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,12 @@
 @import 'reset.css';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
 @import 'status-bar.css';
+@import 'header.css';
 
 body {
     background-color: white;
     padding: 10px 20px;
     color: #020202;
     font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-
-
 
 }
