--- a/css/header.css
+++ b/css/header.css
@@ -1,37 +1,32 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 .header__title {
-
-    font-size: 24px;
-    /*700인 이유는 import할때 600, bold 를 가져와서(styles.css 보면암)*/
-    font-weight: 600;
+  font-size: 24px;
+  /*700인 이유는 import할때 600, bold 를 가져와서(styles.css 보면암)*/
+  font-weight: 600;
 }
 
 .header .header__icon {
-    font-size: 20px;
-    margin-left: 20px;
-    cursor: pointer;
-
+  font-size: 20px;
+  margin-left: 20px;
+  cursor: pointer;
 }
 
 .header .header__header-column {
-
-    display: flex;
-
+  display: flex;
+  align-items: center;
 }
 
 .header .header__back-btn {
-
-    font-size: 22px;
-    margin-right: 15px;
-
+  font-size: 22px;
+  margin-right: 15px;
 }
 
 a {
-
-    color: inherit
+  color: inherit;
 }
