--- a/css/friends.css
+++ b/css/friends.css
@@ -6,7 +6,7 @@
   margin-top: 20px;
   padding: 20px 0px;
   border-top: 1px solid #f7f7f7;
-  border-bottom: 1px solid #9c6a6a;
+  border-bottom: 1px solid #f7f7f7;
   margin: 20px 0px;
 }
 
