--- a/css/friend.css
+++ b/css/friend.css
@@ -58,3 +58,12 @@
 .friend__now-listening span {
   opacity: 0.7;
 }
+
+.friend__add-btn {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+}
