--- a/css/chat.css
+++ b/css/chat.css
@@ -54,11 +54,14 @@
 }
 
 .chat-screen .chat__messages {
+  border-top: 1px solid #f7f7f7;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+
+  padding: 0px 20px;
   padding-top: 30px;
-  border-top: 1px solid #f7f7f7;
 }
 
 .chat__messages .chat__timestamp {
@@ -71,4 +74,47 @@
     rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+.message {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.incoming-message {
+  align-self: flex-start;
+}
+
+.incoming-message img {
+  width: 30px;
+  border-radius: 15px;
+  margin-right: 15px;
+}
+
+.sent-message {
+  align-self: flex-end;
+}
+
+.message .message__bubble {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 16px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+
+.incoming-message .message__author {
+  margin-top: 15px;
+  display: block;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.incoming-message .message__bubble {
+  border-bottom-left-radius: 0px;
+}
+
+.sent-message .message__bubble {
+  border-bottom-right-radius: 0px;
 }
