--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,16 @@
+.header-wrapper {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  padding: 5px 0px;
+  background-color: white;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
 .chats-body {
-  padding: 0;
+  padding: 10px 0px;
+  padding-top: 100px;
 }
 
 .chats-body .header,
@@ -7,50 +18,73 @@
   padding: 0px, 20px;
 }
 
-.chat-screen {
+.chats-body {
   background-image: url("../images/chatBg.png");
-  min-height: 100vh;
+  min-height: 1000vh;
 }
 
-.chat__write {
+.chat__write--container {
   position: fixed;
-  bottom: 50px;
   /*width는 가로의 길이를 정해줌, backgroundcolor를 써보면 알수있음*/
-  width: 80%;
   /*margin 0 auto  , left 0  , right 0  세가지를 같이 적어주는게 가운데 정렬하는 방법*/
-  margin: 0 auto;
   left: 0;
   right: 0;
+  bottom: 0px;
   /*---------------------------------------*/
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fcfcfc;
-  padding: 0px 20px;
-  border-radius: 40px;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  width: 100%;
+  /*box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);*/
   /*box-shadow 는 수평, 수직, 블러 값  순서이다.  rgba의 마지막값은 opacity다.   콤마다음 적어주는것은 상단부분에 대한 shadow이다.*/
   /*예를들어 이렇게도 적어줄 수 있음 ->> box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2), 0px -8px 20px rgba(0, 0, 0, 0.2);*/
 }
 
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+
+.chat__write {
+  margin: 0 auto;
+  bottom: 0px;
+  width: 100%;
+  border-radius: 0;
+  padding: 20px 60px;
+  border: none;
+  font-size: 14px;
+  transition: width 0.5s ease-in-out, box-shadow 0.5s ease-in-out,
+    border-radius 0.5s ease-in-out, tran0form 0.5s ease-in-out;
+}
+
+.chat__write:focus {
+  outline: none;
+  width: 80%;
+  transform: translateY(-100px);
+  border-radius: 40px;
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
+.chat__icon {
+  font-size: 18px;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.chat__write:focus ~ .chat__icon {
+  opacity: 0;
+}
 .chat__write i {
   font-size: 22px;
 }
 
 .chat__write-column:nth-child(2) {
   width: 80%;
-}
-
-.chat__write-column input {
-  padding: 20px 10px;
-  width: 100%;
-  border: none;
-  font-size: 14px;
-}
-
-.chat__write-column input:focus {
-  outline: none;
 }
 
 .chat-screen .chat__messages {
@@ -97,15 +131,18 @@
 }
 
 .message .message__bubble {
+  display: block;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 16px 16px -8px,
     rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
   padding: 10px 20px;
   border-radius: 20px;
+  color: white;
+  font-weight: 600;
 }
 
 .incoming-message .message__author {
-  margin-top: 15px;
+  margin-top: 10px;
   display: block;
   font-weight: 600;
   font-size: 12px;
@@ -113,8 +150,10 @@
 
 .incoming-message .message__bubble {
   border-bottom-left-radius: 0px;
+  background-image: linear-gradient(to right, #e55d87, #5fc3e4);
 }
 
 .sent-message .message__bubble {
   border-bottom-right-radius: 0px;
+  background-image: linear-gradient(to right, #e55d87, #5fc3e4);
 }
