--- a/css/chat.css
+++ b/css/chat.css
@@ -4,7 +4,8 @@ z.header-wrapper {
   width: 100%;
   padding: 5px 0px;
   background-color: white;
-  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
 .chats-body {
@@ -52,23 +53,19 @@ z.header-wrapper {
 
 @keyframes float {
   0% {
-    box-shadow: 0 0px 60px -12px rgba(50, 50, 93, 0.25),
-      0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-
-
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
   }
-
   50% {
-    box-shadow: 0 0px -60px rgba(50, 50, 93, 0.25),
-      0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-
+    box-shadow: 0 30px 60px -60px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
   }
-
   100% {
-
-    box-shadow: 0 0px 60px -12px rgba(50, 50, 93, 0.25),
-      0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3),
+      0 -12px 36px -8px rgba(0, 0, 0, 0.025);
   }
 }
 
@@ -92,7 +89,7 @@ z.header-wrapper {
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 
-  animation: float 3s linear infinite forwards;
+  animation: float 1s linear infinite forwards;
 }
 
 .chat__icon {
@@ -100,7 +97,7 @@ z.header-wrapper {
   transition: opacity 0.3s ease-in-out;
 }
 
-.chat__write:focus~.chat__icon {
+.chat__write:focus ~ .chat__icon {
   opacity: 0;
 }
 
@@ -153,9 +150,20 @@ z.header-wrapper {
   width: 30px;
   border-radius: 15px;
   margin-right: 15px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+  animation: spin 1s linear infinite;
 }
 
-
+@keyframes spin {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateY(1turn);
+  }
+}
 
 .message .message__bubble {
   display: block;
@@ -185,7 +193,6 @@ z.header-wrapper {
   border-bottom-right-radius: 0px;
   background-image: linear-gradient(to right, #e55d87, #5fc3e4);
 }
-
 
 @keyframes incomingAnim {
   from {
