--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,10 @@
 @import "friend.css";
 @import "friends.css";
 @import "find.css";
-@import 'more.css';
-@import 'settings.css';
-@import 'chat.css';
+@import "more.css";
+@import "settings.css";
+@import "chat.css";
+@import "mobile.css";
 
 * {
   box-sizing: border-box;
@@ -20,4 +21,23 @@ body {
   color: #020202;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+main {
+  animation: fadeIn 0.5s ease-in-out;
 }
